# tagged

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
server/: manage.py
server/asset/: models.py
server/asset/migrations/: 0001_initial.py  0002_initial.py
server/server/: settings.py
server/tag/: models.py
server/tag/migrations/: 0001_initial.py  0002_initial.py
server/user/: models.py  tests.py
server/user/migrations/: 0001_initial.py
