[tool.poetry]
name = "tagged"
version = "0.1.0"
description = ""
authors = ["wenke.lai <wenke.studio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# django
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
drf-yasg = "^1.21.7"
# web server
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pylint = "^3.1.0"
pylint-django = "^2.5.5"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
faker = "^24.8.0"
bandit = "^1.7.8"
safety = "^3.1.0"

[tool.isort]
profile = "black"
known_django = "django,rest_framework,drf_yasg"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = "migrations"

[tool.pylint.main]
load-plugins = [
  "pylint_django"
]
django-settings-module = "server.settings"
ignore = [
  "db.sqlite3",
]
ignore-patterns = [
  'migrations/'
]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "no-member",
  "fixme",
  "too-many-ancestors",
  "arguments-differ",
  "invalid-str-returned",
  "abstract-method",
]

[tool.pylint.basic]
good-names = [
  "pk",
  "_"
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
  "/migrations/"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "server.settings"
python_files = ['tests.py', 'test_*.py']
filterwarnings = [
  # PEP 565 suggests that DeprecationWarnings shouldn't be ignored by default
  # We should consider upgrade the related packages to fix the warnings
  # For example: `google` package seems deprecate lots of APIs
  "ignore::DeprecationWarning"
]

[tool.bandit]
skips = ["B101"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
